--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1><em>Naresh Babu T G</em></h1>
         <p><em>Studying BE in <strong><a href="http://www.cittumkur.org/oldversion/">CHANNABASAVESHWARA INSTITIUTE OF TECHNOLOGY</a></strong>,Gubbi. <br><strong>Branch : CSE <br>Sem : VI SEM <br> Sec : B</strong></em> </p>
-        <p>I am an Web Developer,I ❤ Beer.</p>
+        <p>I am eager to kick Start My Career as a Developer.</p>
       </td>
     </tr>
 
@@ -27,9 +27,9 @@
 
   <h3>Hobbies</h3>
   <ol>
-    <li>Designing Web Pages</li>
-    <li>Smoking</li>
-    <li>Building Apps</li>
+    <li>Playing Cricket</li>
+    <li>Listening Songs</li>
+  
   </ol>
   <hr>
 
@@ -66,16 +66,26 @@
   <table cellspacing="10">
     <tr>
       <td>Python</td>
-      <td>⭐⭐⭐⭐⭐</td>
+      <td>(Intermediate)</td>
     </tr>
     <tr>
-      <td>Web development</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>JavaScript</td>
+      <td>(Intermediate)</td>
     </tr>
     <tr>
-      <td>Photography</td>
-      <td>⭐⭐⭐⭐</td>
+      <td>HTML</td>
+      <td>(Basic)</td>
     </tr>
+    <tr>
+      <td>CSS</td>
+      <td>(Basic)</td>
+    </tr>
+    <tr>
+      <td>Python Libraries(Pandas, Numpy, Matplotlib)</td>
+      <td>(Basic)</td>
+    </tr>
+    
+
 
   </table>
 
